--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@react-three/fiber": "latest",
     "@react-three/postprocessing": "^3.0.4",
     "autoprefixer": "^10.4.20",
+    "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
